# smartbins-backend

./: Dockerfile  db.sqlite3  pyproject.toml  start
backend/: settings.py  urls.py
data/: models.py  urls.py  views.py
data/migrations/: 0001_initial.py
data/serializers/: __init__.py  bins_create_serializer.py  bins_list_serializer.py
data/services/: ttn.py
